Bug 154647 - Shortcut editing box doesnt hide, then System Settings crashes
Summary: Shortcut editing box doesnt hide, then System Settings crashes
Status: RESOLVED FIXED
Alias: None
Product: kcontrol
Classification: Unmaintained
Component: kcmkeys (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Ellis Whitehead
URL:
Keywords:
: 155109 156353 157035 157172 157350 157790 162367 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-12-26 22:01 UTC by Gabriel Trisca
Modified: 2008-06-08 16:40 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Editing a shortcut before error (87.87 KB, image/png)
2007-12-26 22:02 UTC, Gabriel Trisca
Details
Error present after changing "KDE Component" (54.77 KB, image/png)
2007-12-26 22:05 UTC, Gabriel Trisca
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabriel Trisca 2007-12-26 22:01:24 UTC
Version:           SVN (using KDE Devel)
Installed from:    Compiled sources
Compiler:          gcc 4.1.2 
OS:                Linux

When you double click an item (or click the arrow) in the "System Settings > Keyboard & Mouse > Keyboard Shortcuts" list to open the little box where you can edit the shortcut, and then go to the top and select a different "KDE Component" (without closing the edit box), the box stays in place instead of hiding. Now if you double click, or click the arrow, to edit another shortcut in this new category, System Settings crashes.
Comment 1 Gabriel Trisca 2007-12-26 22:02:24 UTC
Created attachment 22689 [details]
Editing a shortcut before error
Comment 2 Gabriel Trisca 2007-12-26 22:05:03 UTC
Created attachment 22690 [details]
Error present after changing "KDE Component"

The next thing after this, if you double click the "Show Dashboard" item, it
would crash
Comment 3 Michael Jansen 2008-02-21 14:09:20 UTC
*** Bug 157790 has been marked as a duplicate of this bug. ***
Comment 4 Michael Jansen 2008-02-21 14:09:58 UTC
*** Bug 157350 has been marked as a duplicate of this bug. ***
Comment 5 Michael Jansen 2008-02-21 14:10:36 UTC
*** Bug 157172 has been marked as a duplicate of this bug. ***
Comment 6 Michael Jansen 2008-02-21 14:11:05 UTC
*** Bug 157035 has been marked as a duplicate of this bug. ***
Comment 7 Michael Jansen 2008-02-21 14:11:43 UTC
*** Bug 156353 has been marked as a duplicate of this bug. ***
Comment 8 Michael Jansen 2008-02-22 02:07:04 UTC
SVN commit 777970 by mjansen:

Introducing kglobalshortcutseditor. All bugs related to that module should be fixed.

BUG: 154647

 M  +2 -5      CMakeLists.txt  
 M  +30 -47    globalshortcuts.cpp  
 M  +4 -14     globalshortcuts.h  
 D             globalshortcuts.ui  
 A             kglobalshortcutseditor.cpp   [License: GPL (v2+)]
 A             kglobalshortcutseditor.h   [License: GPL (v2+)]
 A             kglobalshortcutseditor.ui  


WebSVN link: http://websvn.kde.org/?view=rev&revision=777970
Comment 9 Anne-Marie Mahfouf 2008-02-23 13:55:54 UTC
*** Bug 155109 has been marked as a duplicate of this bug. ***
Comment 10 Michael Jansen 2008-06-08 16:40:25 UTC
*** Bug 162367 has been marked as a duplicate of this bug. ***