Introducing kglobalshortcutseditor. All bugs related to that module should be fixed.

BUG: 154647

svn path=/trunk/KDE/kdebase/workspace/; revision=777970