kcontrol/keys/globalshortcuts.cpp
@@ -17,19 +17,18 @@
  */
 #include "globalshortcuts.h"
 
-#include "ui_globalshortcuts.h"
-
 #include <QDBusConnection>
 #include <QDBusInterface>
 #include <QDBusReply>
 #include <QDBusMetaType>
 #include <QMetaType>
 #include <QVBoxLayout>
+#include <QPointer>
 
 #include <kpluginfactory.h>
 #include <kactioncollection.h>
 #include <kaction.h>
-#include <kshortcutseditor.h>
+#include <kglobalshortcutseditor.h>
 #include <kdebug.h>
 #include <qcombobox.h>
 #include <kglobalaccel.h>
@@ -40,44 +39,37 @@ K_EXPORT_PLUGIN(GlobalShortcutsModuleFactory("kcmkeys"))
 Q_DECLARE_METATYPE( QList<int> )
 
 GlobalShortcutsModule::GlobalShortcutsModule( QWidget * parent, const QVariantList & args )
-    : KCModule(GlobalShortcutsModuleFactory::componentData(), parent, args), ui(0),
-      editor(0), saved(false)
+    : KCModule(GlobalShortcutsModuleFactory::componentData(), parent, args),
+      editor(0)
 {
-    ui = new Ui::GlobalShortcuts();
-    ui->setupUi(this);
-    layout()->setMargin(0);
-
-    KCModule::setButtons( KCModule::Buttons(KCModule::Default) );
-
-    editor = new KShortcutsEditor(this, KShortcutsEditor::GlobalAction);
+    KCModule::setButtons( KCModule::Buttons(KCModule::Default|KCModule::Apply) );
+    editor = new KGlobalShortcutsEditor(this, KShortcutsEditor::GlobalAction);
+    setLayout( new QVBoxLayout );
     layout()->addWidget(editor);
-
-    connect(editor, SIGNAL(keyChange()), this, SLOT(changed()));
-    connect(ui->components, SIGNAL(activated(const QString&)),
-            this, SLOT(componentChanged(const QString&)));
+    connect(editor, SIGNAL(changed()), this, SLOT(changed()) );
     load();
 }
 
 GlobalShortcutsModule::~GlobalShortcutsModule()
-{
-    if(!saved)
-        editor->undoChanges();
-    delete ui;
-}
+{}
 
 void GlobalShortcutsModule::load()
 {
-    ui->components->clear();
+    // Undo all changes not yet applied
+    editor->undo();
+
     qRegisterMetaType<QList<int> >();
     qDBusRegisterMetaType<QList<int> >();
     QDBusConnection bus = QDBusConnection::sessionBus();
-    QDBusInterface* iface = new QDBusInterface( "org.kde.kded", "/KdedGlobalAccel", "org.kde.KdedGlobalAccel", bus, this );
+    QPointer<QDBusInterface> iface = new QDBusInterface( "org.kde.kded", "/KdedGlobalAccel", "org.kde.KdedGlobalAccel", bus, this );
 
     QDBusReply<QStringList> components = iface->call("allComponents");
-    KComponentData curcomp = KGlobal::mainComponent();
+
+    QHash<QString,KActionCollection*> actionCollections;
+
     foreach(const QString &component, components.value() )
     {
-        kDebug() << "component:" << component;
+        // kDebug() << "component:" << component;
         KGlobalAccel::self()->overrideMainComponentData(KComponentData(component.toAscii()));
         KActionCollection* col = new KActionCollection(this);
         actionCollections[component] = col;
@@ -85,7 +77,7 @@ void GlobalShortcutsModule::load()
         QDBusReply<QStringList> actions = iface->call("allActionsForComponent", qVariantFromValue(component) );
         foreach(const QString &actionText, actions.value() )
         {
-            kDebug() << "- action:" << actionText;
+            // kDebug() << "- action:" << actionText;
             QString actionName = QString("%1_%2").arg(component).arg(col->count());
             KAction *action = col->addAction(actionName);
             action->setProperty("isConfigurationAction", QVariant(true));
@@ -97,45 +89,36 @@ void GlobalShortcutsModule::load()
             if (!defaultShortcut.value().empty())
             {
                 int key = defaultShortcut.value().first();
-                kDebug() << "-- defaultShortcut" << KShortcut(key).toString();
+                // kDebug() << "-- defaultShortcut" << KShortcut(key).toString();
                 action->setGlobalShortcut(KShortcut(key), KAction::DefaultShortcut, KAction::NoAutoloading);
             }
             if (!shortcut.value().empty())
             {
                 int key = shortcut.value().first();
-                kDebug() << "-- shortcut" << KShortcut(key).toString();
+                // kDebug() << "-- shortcut" << KShortcut(key).toString();
                 action->setGlobalShortcut(KShortcut(key), KAction::ActiveShortcut, KAction::NoAutoloading);
             }
         }
     }
-    KGlobalAccel::self()->overrideMainComponentData(curcomp);
-    ui->components->addItems( actionCollections.keys() );
-    componentChanged(ui->components->currentText());
-    delete iface;
-}
 
-void GlobalShortcutsModule::save()
-{
-    kDebug() << "saving shortcuts";
-    editor->save();
-    saved = true;
+    // Add components and their keys to the editor
+    Q_FOREACH (QString component, actionCollections.keys() )
+    {
+        // kDebug() << "Adding collection " << component;
+        editor->addCollection( actionCollections[component], component );
+    }
+
 }
 
 void GlobalShortcutsModule::defaults()
 {
-    kDebug() << "undoing shortcuts";
     editor->allDefault();
 }
 
-void GlobalShortcutsModule::componentChanged(const QString &str)
+
+void GlobalShortcutsModule::save()
 {
-    kDebug() << "Switching to component:" << str;
-    if( actionCollections.contains(str) )
-    {
-        KGlobalAccel::self()->overrideMainComponentData(KComponentData(str.toAscii()));
-        editor->clearCollections();
-        editor->addCollection( actionCollections[str] );
-    }
+    editor->save();
 }
 
 #include "globalshortcuts.moc"
